# survival_analysis

./: README.md  pyproject.toml
data/processed/: Processed_Telecom_Data.csv
models/: modelo_cox.pkl
notebooks/: EDA.ipynb  Survival_Analysis.ipynb
